wxc/include/ewxw/wxc_glue.h


/* $Id: wxc_glue.h 4 2005-07-22 04:08:34Z efuzzyone $ */

/* Null */
TClass(wxAcceleratorTable) Null_AcceleratorTable(  );

TClass(wxBitmap) Null_Bitmap(  );

TClass(wxCursor) Null_Cursor(  );

TClass(wxFont) Null_Font(  );

TClass(wxIcon) Null_Icon(  );

TClass(wxPalette) Null_Palette(  );

TClass(wxPen) Null_Pen(  );

TBool      Quantize( TClass(wxImage) src, TClass(wxImage) dest, int desiredNoColours, void* eightBitData, int flags );

TBool      QuantizePalette( TClass(wxImage) src, TClass(wxImage) dest, void* pPalette, int desiredNoColours, void* eightBitData, int flags );

void       wxCFree( void* _ptr );

void*      ELJApp_CreateLogTarget(  );

void       ELJApp_Dispatch(  );

void       ELJApp_DisplaySize( TSizeOutVoid(_w,_h) );

void       ELJApp_EnableTooltips( TBool _enable );

void       ELJApp_EnableTopLevelWindows( int _enb );

int        ELJApp_ExecuteProcess( TStringVoid _cmd, int _snc, TClass(wxProcess) _prc );

void       ELJApp_Exit(  );

void       ELJApp_ExitMainLoop(  );

void*      ELJApp_FindWindowById( int _id, TClass(wxWindow) _prt );

TClass(wxWindow) ELJApp_FindWindowByLabel( TStringVoid _lbl, TClass(wxWindow) _prt );

TClass(wxWindow) ELJApp_FindWindowByName( TStringVoid _lbl, TClass(wxWindow) _prt );

TClass(wxApp) ELJApp_GetApp(  );

TStringLen ELJApp_GetAppName( TStringOutVoid _buf );

TStringLen ELJApp_GetClassName( TStringOutVoid _buf );

int        ELJApp_GetExitOnFrameDelete(  );

TStringLen ELJApp_GetOsDescription( TStringOutVoid _buf );

int        ELJApp_GetOsVersion( void* _maj, void* _min );

TClass(wxWindow) ELJApp_GetTopWindow(  );

int        ELJApp_GetUseBestVisual(  );

TStringLen ELJApp_GetUserHome( void* _usr, TStringOutVoid _buf );

TStringLen ELJApp_GetUserId( TStringOutVoid _buf );

TStringLen ELJApp_GetUserName( TStringOutVoid _buf );

TStringLen ELJApp_GetVendorName( TStringOutVoid _buf );

/* int        ELJApp_GetWantDebugOutput(  ); */
void       ELJApp_InitAllImageHandlers(  );

int        ELJApp_Initialized(  );

int        ELJApp_MainLoop(  );

void       ELJApp_MousePosition( TPointOutVoid(_x,_y) );

int        ELJApp_Pending(  );

int        ELJApp_SafeYield( TClass(wxWindow) _win );

/* int        ELJApp_SendIdleEvents(  ); */
/* int        ELJApp_SendIdleEventsToWindow( TClass(wxWindow) win ); */
void       ELJApp_SetAppName( TString name );

void       ELJApp_SetClassName( TString name );

void       ELJApp_SetExitOnFrameDelete( int flag );

void       ELJApp_SetPrintMode( int mode );

void       ELJApp_SetTooltipDelay( int _ms );

void       ELJApp_SetTopWindow( TClass(wxWindow) _wnd );

void       ELJApp_SetUseBestVisual( int flag );

void       ELJApp_SetVendorName( TString name );

void       ELJApp_Sleep( int _scs );

void       ELJApp_USleep( int _mscs );

int        ELJApp_Yield(  );

TBoolInt   ELJApp_IsTerminating(  );


/* wxClassInfo */
TClassDef(wxClassInfo)
void*      wxClassInfo_CreateClassByName( TSelf(wxClassInfo) _inf );

void*      wxClassInfo_GetClassName( TSelf(wxClassInfo) _inf );

TBool      wxClassInfo_IsKindOf( TSelf(wxClassInfo) _obj, TStringVoid _name );

int        wxEvent_NewEventType(  );


/* wxEvtHandler */
TClassDefExtend(wxEvtHandler,wxObject)
void       wxEvtHandler_AddPendingEvent( TSelf(wxEvtHandler) _obj, TClass(wxEvent) event );

int        wxEvtHandler_Connect( TSelf(wxEvtHandler) _obj, int first, int last, int type, void* data );

TClass(wxEvtHandler) wxEvtHandler_Create(  );

void       wxEvtHandler_Delete( TSelf(wxEvtHandler) _obj );

int        wxEvtHandler_Disconnect( TSelf(wxEvtHandler) _obj, int first, int last, int type, int id );

TBool      wxEvtHandler_GetEvtHandlerEnabled( TSelf(wxEvtHandler) _obj );

TClass(wxEvtHandler) wxEvtHandler_GetNextHandler( TSelf(wxEvtHandler) _obj );

TClass(wxEvtHandler) wxEvtHandler_GetPreviousHandler( TSelf(wxEvtHandler) _obj );

int        wxEvtHandler_ProcessEvent( TSelf(wxEvtHandler) _obj, TClass(wxEvent) event );

void       wxEvtHandler_ProcessPendingEvents( TSelf(wxEvtHandler) _obj );

void       wxEvtHandler_SetEvtHandlerEnabled( TSelf(wxEvtHandler) _obj, TBool enabled );

void       wxEvtHandler_SetNextHandler( TSelf(wxEvtHandler) _obj, TClass(wxEvtHandler) handler );

void       wxEvtHandler_SetPreviousHandler( TSelf(wxEvtHandler) _obj, TClass(wxEvtHandler) handler );